<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <androidx.cardview.widget.CardView
        android:id="@+id/card_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="8dp"
        card_view:cardCornerRadius="8dp"
        card_view:cardElevation="8dp">

        <LinearLayout

            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/layout_for_card_bg_image"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:scaleType="fitXY"
                android:contentDescription="@string/quote_background"
                android:src="@drawable/bg3" />
        </LinearLayout>

        <LinearLayout xmlns:app="http://schemas.android.com/apk/res-auto"
            android:id="@+id/quotes"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_above="@+id/menu_items"
            android:orientation="vertical">

            <TextView
                android:id="@+id/quote_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="8dp"
                android:maxLines="6"
                android:text="@string/quote_dummy_text"
                android:textColor="#ffffff"
                android:textSize="42sp"
                app:autoSizeMaxTextSize="100sp"
                app:autoSizeMinTextSize="12sp"
                app:autoSizeStepGranularity="2sp"
                app:autoSizeTextType="uniform" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:weightSum="3">

                <TextView
                    android:id="@+id/quote_category"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginStart="8dp"
                    android:layout_weight="2"
                    android:gravity="start"
                    android:text="@string/quote_category_demo"
                    android:textColor="#ffffff"
                    android:paddingStart="8dp"
                    android:paddingEnd="8dp"
                    android:textSize="12sp" />

                <TextView
                    android:id="@+id/quote_author"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginEnd="8dp"
                    android:layout_weight="1"
                    android:gravity="end"
                    android:text="@string/author_name_demo"
                    android:textColor="#ffffff"
                    android:paddingStart="8dp"
                    android:paddingEnd="8dp"
                    android:textSize="24sp" />


            </LinearLayout>


        </LinearLayout>


        <LinearLayout
            android:id="@+id/menu_items"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_above="@+id/quotes"
            android:layout_gravity="bottom"
            android:layout_margin="4dp"
            android:layout_marginBottom="8dp"
            android:weightSum="4">

            <ImageView
                android:id="@+id/listen_icon"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:layout_marginBottom="8dp"
                android:layout_weight="1"
                android:scaleType="fitCenter"
                android:contentDescription="@string/listen_quote"
                android:src="@drawable/play_icon" />

            <ImageView
                android:id="@+id/share_icon"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:layout_marginBottom="8dp"
                android:layout_weight="1"
                android:scaleType="fitCenter"
                android:contentDescription="@string/share_quote"
                android:src="@drawable/share_icon" />

            <ImageView
                android:id="@+id/fav_icon"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:layout_marginBottom="8dp"
                android:layout_weight="1"
                android:scaleType="fitCenter"
                android:contentDescription="@string/set_favourite"
                android:src="@drawable/fav_white" />

            <ImageView
                android:id="@+id/whatsapp_icon"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:layout_marginBottom="8dp"
                android:layout_weight="1"
                android:elevation="16dp"
                android:contentDescription="@string/set_status"
                android:scaleType="fitCenter"
                android:src="@drawable/ic_whatsapp"
                tools:targetApi="lollipop" />
        </LinearLayout>


    </androidx.cardview.widget.CardView>
</LinearLayout>