<?xml version="1.0" encoding="utf-8"?>
<FrameLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">


    <LinearLayout

        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/layout_for_card_bg_image"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:scaleType="centerCrop"
            android:contentDescription="@string/quote_background"
            android:src="@drawable/bg3" />
    </LinearLayout>


    <LinearLayout xmlns:app="http://schemas.android.com/apk/res-auto"
        android:id="@+id/quotes"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:orientation="vertical">


        <TextView
            android:id="@+id/quote_text_widget"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="8dp"
            android:maxLines="6"
            android:text="@string/quote_dummy_text"
            android:textColor="#ffffff"
            android:textSize="24sp"
            app:autoSizeMaxTextSize="100sp"
            app:autoSizeMinTextSize="12sp"
            app:autoSizeStepGranularity="2sp"
            app:autoSizeTextType="uniform" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="3">

            <TextView
                android:id="@+id/quote_category_widget"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginStart="8dp"
                android:layout_weight="2"
                android:gravity="start"
                android:text="@string/quote_category_demo"
                android:textColor="#ffffff"
                android:textSize="12sp" />

            <TextView
                android:id="@+id/quote_author_widget"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginEnd="8dp"
                android:layout_weight="1"
                android:gravity="end"
                android:text="@string/author_name_demo"
                android:textColor="#ffffff"
                android:textSize="18sp" />


        </LinearLayout>


    </LinearLayout>

</FrameLayout>